--- a/PIMA.ipynb
+++ b/PIMA.ipynb
@@ -39,9 +39,8 @@
         "    seaborn and matplotlib for visualizations. We will then import Logistic\n",
         "    Regression,xgboost & adaboost algorithm from sklearn. These algorithm will\n",
         "    help us build our classification model and we would choose the best amongst\n",
-        "    the three. We would also use hyperparameter tuning especially grid search\n",
-        "    cv to fine tune our models. Lastly, we will use joblib available in sklearn\n",
-        "    to save our model for future use.\n"
+        "    the three. We would also use hyperparameter tuning \n",
+        "    cv to fine tune our models. Lastly,.\n"
       ]
     },
     {
