--- a/PIMA.ipynb
+++ b/PIMA.ipynb
@@ -40,7 +40,7 @@
         "    Regression,xgboost & adaboost algorithm from sklearn. These algorithm will\n",
         "    help us build our classification model and we would choose the best amongst\n",
         "    the three. We would also use hyperparameter tuning \n",
-        "    cv to fine tune our models. Lastly,.\n"
+        "    cv to fine tune our models.\n"
       ]
     },
     {
